--- a/client_web_app/package.json
+++ b/client_web_app/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.3",
     "axios": "^0.27.2",
+    "base64-min": "^2.0.0",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
