--- a/server_web_app/package.json
+++ b/server_web_app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/identity": "^3.0.0",
     "@azure/storage-blob": "^12.11.0",
+    "base64-min": "^2.0.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
