--- a/server_web_app/package.json
+++ b/server_web_app/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@azure/identity": "^3.0.0",
+    "@azure/msal-node": "^1.14.1",
     "@azure/storage-blob": "^12.11.0",
+    "axios": "^1.0.0",
     "base64-min": "^2.0.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "muller": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "parse-multipart": "^1.0.4"
