--- a/server_web_app/package.json
+++ b/server_web_app/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "mssql": "^9.0.1",
     "muller": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "parse-multipart": "^1.0.4"
