--- a/server_web_app/package.json
+++ b/server_web_app/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/identity": "^3.0.0",
+    "@azure/keyvault-secrets": "^4.6.0",
     "@azure/msal-node": "^1.14.1",
     "@azure/storage-blob": "^12.11.0",
     "axios": "^1.0.0",
