--- a/client_web_app/package.json
+++ b/client_web_app/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.27.2",
     "base64-min": "^2.0.0",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.36.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -46,5 +48,4 @@
       "last 1 safari version"
     ]
   }
- 
 }
