Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,12 @@ steps:
 - script: |
     pushd $(path)
     npm install
+  displayName: 'npm install'
+
+- script: |
     npm run build
     popd
-  displayName: 'npm install and build'
+  displayName: 'npm run build'
 
 
 - task: ArchiveFiles@2
